# AstrBot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README_fr.md  README_ja.md  README_ru.md  README_zh-TW.md  README_zh.md  main.py  pyproject.toml  requirements.txt  test_bootstrap.py  test_lsp_ty.py
astrbot/: __init__.py  __main__.py  runtime_bootstrap.py
astrbot/_internal/: __init__.py
astrbot/api/: __init__.py  mcp.py  skills.py  tools.py
astrbot/cli/: __main__.py  i18n.py
astrbot/core/: __init__.py  astr_agent_context.py  astr_agent_run_util.py  astr_agent_tool_exec.py  astr_main_agent.py  astr_main_agent_resources.py  astrbot_config_mgr.py  astrbot_config_mgr.py.tmp.384899.1774276528543  core_lifecycle.py  file_token_service.py  log.py  subagent_orchestrator.py  tool_provider.py
astrbot/dashboard/: server.py  utils.py
astrbot/rust/: __init__.py  _core.pyi
astrbot/tui/: i18n.py
dashboard/: .eslintignore  .eslintrc.cjs  .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  vite.config.ts
dashboard/scripts/: patch-dompurify.mjs  subset-mdi-font.mjs
dashboard/src/: App.vue  main.ts
dashboard/tests/: hashRouteTabs.test.mjs  routerReadiness.test.mjs  subsetMdiFont.test.mjs
docs/: refactor-neo-decouple.md
examples/: abp_demo.py
openspec/: SPEC.md  TASKS.md  a2a.md  abp.md  acp.md  agent-message.md  api.md  config.md  config.yaml  env.md  lsp.md  mcp.md  path.md  rust-ffi.md
rust/: Cargo.toml
rust/buildHooks/: __init__.py  custom.py
rust/src/: a2a.rs  abp.rs  cli.rs  config.rs  error.rs  lib.rs  message.rs  orchestrator.rs  protocol.rs  python.rs  server.rs  stats.rs
scripts/: fw2hw.sh  hatch_build.py
tests/: conftest.py  test_api_key_open_api.py  test_astrbot_paths.py  test_booter_decoupling.py  test_cmd_init.py  test_computer_config.py  test_dashboard.py  test_discord_platform_adapter.py  test_kb_import.py  test_openai_source.py  test_profile_aware_tools.py  test_tool_loop_agent_runner.py
(+439 files in other folders)
