[package]
name = "astrbot-core"
version = "4.25.0"
edition = "2024"

[lib]
name = "astrbot__core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }

pyo3 = { version = "0.28", features = [
    "full",
    "extension-module",
], optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 1

[profile.dev.package."*"]
opt-level = 0
