[package]
name = "astrbot-core"
version = "4.25.0"
edition = "2024"

[lib]
name = "astrbot_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3", "pyo3-asyncio"]
pyo3-asyncio = []
pyo3-async-runtimes = ["dep:pyo3-async-runtimes"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
lazy_static = "1.5"

pyo3 = { version = "0.28", features = [
    "full",
    "extension-module",
], optional = true }
pyo3-async-runtimes = { version = "0.28", optional = true }
uuid = { version = "1.22.0", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json", "default"] }
dirs = "6.0.0"
tokio-tungstenite = "0.29.0"
base64 = "0.22.1"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 1

[profile.dev.package."*"]
opt-level = 0
